kops-project/backend.yml
apiVersion: v1
kind: Service
metadata: 
 name: backend-service 
spec:
 type: ClusterIP 
 selector: 
  app: backend
 ports:
 - protocol: TCP
   port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backendcontainer
          image: "769585693008.dkr.ecr.us-east-2.amazonaws.com/backendrepo:latest"
          imagePullPolicy: Always
          ports:
            - name: tcp
              containerPort: 8000
