kops-project/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mydb-mysql1
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mydb-mysql1    
        ports:
        - name: tcp
          containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mypvc
