kops-project/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sandeepyoutube.cloudknowledge.ga
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
